force-app/main/default/objects/Statement_Of_Work__mdt/Statement_Of_Work__mdt.object-meta.xml
<CustomObject>
    <description>Provides where to find terms and conditions captured in IM Project&apos;s SOWs</description>
    <label>Statement Of Work</label>
    <pluralLabel>Statement Of Works</pluralLabel>
</CustomObject>