force-app/main/default/objects/Statement_Of_Work__mdt/fields/Billing_Countries__c.field-meta.xml
<CustomField>
    <fullName>Billing_Countries__c</fullName>
    <label>Billing Countries</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>