force-app/main/default/objects/Statement_Of_Work__mdt/fields/SOW_Digital__c.field-meta.xml
<CustomField>
    <fullName>SOW_Digital__c</fullName>
    <label>SOW Digital</label>
    <length>255</length>
    <type>Text</type>
</CustomField>