force-app/main/default/objects/Statement_Of_Work__mdt/fields/Statement_Type__c.field-meta.xml
<CustomField>
    <fullName>Statement_Type__c</fullName>
    <label>Statement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
                <default>true</default>
                <label>Core</label>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Core And Digital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>