force-app/main/default/objects/Statement_Of_Work__mdt/listViews/All_SOW.listView-meta.xml
<ListView>
    <fullName>All_SOW</fullName>
    <columns>MasterLabel</columns>
    <columns>Language__c</columns>
    <columns>Type__c</columns>
    <columns>Billing_Countries__c</columns>
    <columns>Statement_Type__c</columns>
    <columns>Statement_Of_Work__c</columns>
    <columns>SOW_Digital__c</columns>
    <filterScope>Everything</filterScope>
    <label>All SOW</label>
    <language>en_US</language>
</ListView>